tests/fixtures/errors/invalid_include_tag_missing.puml
@startuml
!include include_tag_source_local.puml!MISSING_TAG
@enduml
